# hello-cpp

./: .dockerignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  as.h  install.sh
.travis/: deploy_dockerhub.sh
hello-bin/: CMakeLists.txt  hello.cpp
hello-lib/: CMakeLists.txt  hello.cpp  hello.h
hello-lib/include/: hello.h
hello-opengl/: CMakeLists.txt
hello-opengl/app/: CMakeLists.txt  LevelManager.cpp  LevelManager.hpp  main.cpp
hello-opengl/app/assets/animations/: demo.txt
hello-opengl/app/assets/shaders/: morphing-vertex-shader.glsl  plain-fragment-shader.glsl  plain-vertex-shader.glsl  texture-fragment-shader.glsl  texture-vertex-shader.glsl
hello-opengl/app/config/: entities.txt  game-entities.txt  game.txt  index.txt  menu-entities.txt  menu.txt
hello-opengl/app/levels/: level1.txt
hello-opengl/app/src/: GameScreen.cpp  GameScreen.hpp  MenuScreen.cpp  MenuScreen.hpp  Screen.hpp  ScreenManager.cpp  ScreenManager.hpp  main.cpp
hello-opengl/app/src/Menu/: MenuItem.cpp
hello-opengl/engine/: CMakeLists.txt
hello-opengl/engine/src/: Debug.hpp  Math.cpp  Math.hpp  Utils.h
hello-opengl/engine/src/AI/BehaviourTree/: BehaviourTree.hpp  Blackboard.hpp
hello-opengl/engine/src/AI/BehaviourTree/Tasks/: FlyTask.hpp  MoveLeftTask.hpp  MoveRightTask.hpp  MoveTask.hpp  OnGroundTask.hpp  SelectorTask.hpp  WaitTask.hpp
hello-opengl/engine/src/Animation/: Animation.hpp  AnimationScene.hpp  TimeLine.hpp
hello-opengl/engine/src/Collision/: BroadPhaseAlgorithm.cpp  BroadPhaseAlgorithm.hpp  NarrowPhaseAlgorithm.cpp
hello-opengl/engine/src/Core/: Application.cpp  Application.hpp  EntryPoint.hpp  Input.hpp  Layer.cpp  Layer.hpp  Loader.cpp  Loader.hpp  SDLWindow.cpp  TextureManager.cpp  TextureManager.hpp  Time.cpp  Time.hpp  Window.hpp
hello-opengl/engine/src/Core/SDL/: SDLInput.cpp  SDLInput.hpp  SDLWindow.cpp  SDLWindow.hpp
hello-opengl/engine/src/ECS/: ECS.hpp  Entity.hpp  EntityManager.hpp  System.hpp  SystemStack.cpp  SystemStack.hpp
hello-opengl/engine/src/ECS/Components/: AIComponent.hpp  AnimationComponent.hpp  CameraComponent.hpp  CollisionComponent.hpp  FrameAnimationComponent.hpp  GroundComponent.hpp  InteractionComponent.hpp  KeyboardControlComponent.hpp  LocationComponent.hpp  MaterialComponent.hpp  MorphingComponent.cpp  MorphingComponent.hpp  ObstacleComponent.hpp  ParalaxScrollingComponent.hpp  ParentComponent.hpp  PointLightComponent.hpp  RenderComponent.cpp  RenderComponent.hpp  RigitBodyComponent.hpp  SlopeComponent.hpp  SpotLightComponent.hpp  SteeringComponent.hpp  TextureComponent.cpp  TextureComponent.hpp  VelocityComponent.hpp
hello-opengl/engine/src/ECS/Systems/: AISystem.cpp  AISystem.hpp  AnimationSystem.cpp  CameraSystem.cpp  CameraSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  ControlSystem.cpp  ControlSystem.hpp  InteractionSystem.cpp  InteractionSystem.hpp  LightSystem.cpp  MorphingSystem.cpp  MorphingSystem.hpp  MoveSystem.cpp  MoveSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  SpotLightSystem.cpp  SteeringSystem.cpp  TextureSystem.cpp  TextureSystem.hpp
hello-opengl/engine/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp
hello-opengl/engine/src/Render/: Buffer.hpp  Camera.hpp  Render.hpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.hpp
hello-opengl/engine/src/Render/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLRender.cpp  OpenGLRender.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp
hello-opengl/engine/src/Sound/: SoundBuffer.hpp  SoundMixer.hpp
hello-opengl/engine/src/Sound/SDL/: SDLSoundBuffer.cpp  SDLSoundBuffer.hpp  SDLSoundMixer.cpp  SDLSoundMixer.hpp
hello-render/: CMakeLists.txt
hello-render/app/: CMakeLists.txt  main.cpp
hello-render/engine/: CMakeLists.txt
hello-render/engine/include/: Engine.hpp
hello-render/engine/src/: Application.cpp  Canvas.cpp  Canvas.hpp  IndexedTriangleRender.cpp  InterpolatedTriangleRender.cpp  InterpolatedTriangleRender.hpp  LineRender.cpp  LineRender.hpp  TriangleRender.hpp  Window.cpp  Window.hpp
hello-render/render-lib/: CMakeLists.txt
hello-render/render-lib/include/: Engine.hpp
hello-render/render-lib/src/: Application.hpp  Canvas.cpp  GfxProgram.hpp  IndexedTriangleRender.hpp  InterpolatedTriangleRender.hpp  TriangleRender.cpp  Window.hpp
hello-sdl/: CMakeLists.txt  main.cpp
